Proyecto Pair Programming/force-app/main/default/objects/Trail__c.object
<CustomObject>
    <fields>
        <fullName>Descriptions__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPoints__c</fullName>
        <label>TotalPoints</label>
        <summaryForeignKey>TrailModule__c.Trail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Trail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TotalPoints__c</field>
            <operation>greaterOrEqual</operation>
            <value>2</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EqualTotalPoints1</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>EqualTotalPoints1</label>
    </listViews>
    <listViews>
        <fullName>MinTotalPoints2</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TotalPoints__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>MinTotalPoints2</label>
    </listViews>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>